--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bx-wrapper {
+    box-shadow: none !important;
+    --webkit-box-shadow: none;
+    border: none !important;
+    margin-bottom: 0 !important;
+}
+
+.post-grid .grid figure {
+    position: relative;
+    cursor: pointer;
+}
+
+.post-grid .grid figcaption {
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.8);  /* Add some background for readability */
+    color: white;
+    padding: 10px;
+    opacity: 0;   /* Initially hidden */
+    width: 100%;
+    transition: opacity 0.3s ease-in-out;  /* Smooth transition */
+}
+
+.post-grid .grid figure:hover figcaption {
+    opacity: 1;   /* Show when figure is hovered */
+}
+
+.popup {
+    background: rgba(0,0,0,0.9);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    overflow-y: scroll;
+}
